correction of layout overflow when switching from landscape to portrait on mobiles | (refactor:components) Layout

--- a/components/HeroAllPages/heroallpages.module.css
+++ b/components/HeroAllPages/heroallpages.module.css
@@ -1,5 +1,6 @@
 .container{
-    width: 100%;
+    /* width: 100%; */
+    width:var(--main-width);
     display: flex;
     justify-content: center;
     align-items: center;
