--- a/styles/globals.css
+++ b/styles/globals.css
@@ -25,14 +25,12 @@
 
   --nav-bar-background: #000;
   --card-background: rgba(196, 196, 196, 0.05);;
-  ;
+
 
   --white-color-active: #E2DEE2;
   --white-color-des-active: rgba(222, 225, 236, 0.7);
   --lightVibrant: rgba(222, 225, 236, 0.7);
   --darkMuted: rgba(2, 2, 2, 0.7);
-  
-
   --gray: #131213;
 
   /* * GRADIENTS */
@@ -51,7 +49,7 @@
   --icon-wrapper: 40px;
   --nav-bar-width: 230px;
   --main-width: calc(100vw - var(--nav-bar-width));
-  --z-nav: 1;
+
 
   /*  * PADDING */
 
@@ -67,7 +65,7 @@
   --border-radius: 12px;
 
   /* * z-index  */
-
+  --z-nav: 1;
 
 }
 
